# traffic-pulse

./: .dockerignore  .env.example  .gitignore  AGENT_RULES.md  Dockerfile  README.md  data_scraper.js  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.js  project-description.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: config.example.yaml  corridors.example.csv  events_calendar.example.csv  incidents.example.csv  logging.yaml  roadworks.example.csv  segments_enrichment.example.csv  weather.example.csv
demo-app/: index.html  package.json
docs/: 00_overview.md  01_phase1_bootstrap.md  02_phase2_ingestion.md  03_phase3_tdx_client.md  04_phase4_preprocessing.md  05_phase5_reliability.md  06_ingestion_scheduling.md  07_frontend_ui.md  08_frontend_ui_qa_matrix.md
scripts/: _bootstrap.py  aggregate_observations.py  build_baselines.py  build_corridor_rankings.py  build_dataset.py  build_event_impacts.py  build_event_links_and_alerts.py  build_events.py  build_events_all.py  build_reliability_rankings.py  build_segment_quality.py  build_weather_features.py  compact_observations.py  detect_anomalies.py  enrich_segments.py  export_report.py  ingest_backfill.py  ingest_daily_backfill.py  ingest_event_calendar.py  ingest_incidents_extra.py  ingest_live_loop.py  ingest_roadworks.py  ingest_runner.py  ingest_sources_all.py  ingest_weather.py  materialize_defaults.py  monitor_health.py  run_api.py  validate_data.py
tests/: test_api_middleware.py  test_append_csv.py  test_corridors_bbox.py  test_reliability_metrics.py  (+6 more)
(+65 files in other folders)
