[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trafficpulse"
version = "0.1.0"
description = "Road congestion analytics and visualization for Taiwan (TDX)."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

